--- a/package.json
+++ b/package.json
@@ -41,22 +41,23 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^11.0.6",
     "input-otp": "1.4.1",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "react": "^19",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.0.0",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-dropzone": "^14.3.8",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
+    "tw-animate-css": "^1.2.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -68,4 +69,3 @@
     "typescript": "^5"
   }
 }
-
