--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/supabase-js": "^2.49.4",
+    "@types/formidable": "^3.4.5",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.0.6",
     "input-otp": "1.4.1",
     "lucide-react": "^0.485.0",
