--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "formidable": "^3.5.2",
     "framer-motion": "^11.0.6",
     "input-otp": "1.4.1",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "react": "^19",
