--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
+    "openai": "^4.95.1",
     "react": "^19",
     "react-day-picker": "^9.0.0",
     "react-dom": "^19",
