--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "input-otp": "1.4.1",
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.485.0",
+    "moondream": "^0.1.0",
     "next": "15.2.4",
     "openai": "^4.95.1",
     "react": "^19",
