--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "sharp": "^0.33.2",
+    "jimp": "^0.22.10",
     "sonner": "^1.7.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^2.5.5",
