add: parellalized annotating

--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "formidable": "^3.5.2",
     "framer-motion": "^11.0.6",
     "input-otp": "1.4.1",
+    "jimp": "^0.22.10",
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.485.0",
     "moondream": "^0.1.0",
     "next": "15.2.4",
     "openai": "^4.95.1",
+    "p-limit": "^6.2.0",
     "react": "^19",
     "react-day-picker": "^9.0.0",
     "react-dom": "^19",
@@ -61,7 +63,6 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "jimp": "^0.22.10",
     "sonner": "^1.7.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^2.5.5",
