--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.49.4",
     "@types/formidable": "^3.4.5",
+    "@types/pg": "^8.11.14",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,6 +57,7 @@
     "next": "15.2.4",
     "openai": "^4.95.1",
     "p-limit": "^6.2.0",
+    "pg": "^8.15.6",
     "react": "^19",
     "react-day-picker": "^9.0.0",
     "react-dom": "^19",
